--- a/learnview-front/index.html
+++ b/learnview-front/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.ico"/>
     <title>Learn View</title>
   </head>
   <body>
